@@ -27,6 +27,7 @@
 * Expose 'data' field in Mango javascript context for data point wrappers. Usage contextPointKey.dataPointWrapper.data
 * Change disk space monitoring metrics to report GB rather than bytes
 * Add more monitored values to monitor server hardware performance and various disk partition sizes in GB
+* Add free form JSON data field to event detectors to allow storage of custom data in the configuration
 
 *Version 3.7.4*
 * Improve work item failure logging
